# dnc-desafio-data-engineer-2024

./: .env  .gitignore  Makefile  README  README.md  pyproject.toml  requirements.txt
dags/: google_directions.py  weather.py  weather_temperature_2m.py
dags/commons/google/directions/: get.py
dags/commons/ingestion/: hash.py  normalization.py
dags/commons/open_meteo/: ingestion_hourly.py  temperature_2m.py
dags/commons/postgres/: postgres.py
docker/: .env  Dockerfile  docker-compose.yaml
docker/init/sql/: create_google_direction.sql  create_tables.sql  create_weather_temperature_2m.sql
tests/: test_generate_hash.py  test_treat_cols_with_null_values.py  test_treat_null_values.py
