[tool.poetry]
name = "dnc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.16.0"
openmeteo-requests = "^1.3.0"
requests = "^2.32.3"
requests-cache = "^1.2.1"
retry-requests = "^2.0.0"
numpy = "^2.1.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
